@@ -1,6 +1,8 @@
+    ADDED: option: Archives > krarc > Enable Write Support
     ADDED: splitter option: Overwrite files without confirmation
     ADDED: action: Go to Other Panel's Directory - shortcut: CTRL+=
 
+    CHANGED: krarc write support is disabled by default
     CHANGED: user action manager starts with the "Basic Properties" tab active
     CHANGED: detailed view: "Automatically Resize Columns" setting is remembered
 
